--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -57,6 +57,7 @@ body::before{
 .lista-de-personagens .personagem img{
     width: 100%;
     height: 100%;
+    border-bottom: 2px solid #47f4ff;
 }
 
 .lista-de-personagens .personagem.selecionado{
